# hippofloop

./: .coverage  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
configs/: default.yaml
notebooks/: kernel-metadata.json  train-hippofloop.ipynb
src/hippofloop/: cli.py  protocols.py
src/hippofloop/data/: cleaner.py  formatter.py  loader.py
src/hippofloop/eval/: evaluator.py  metrics.py
src/hippofloop/export/: exporter.py
src/hippofloop/training/: config.py  trainer.py
tests/: conftest.py  test_protocols.py
tests/data/: test_cleaner.py  test_formatter.py  test_loader.py
tests/eval/: test_evaluator.py  test_metrics.py
tests/export/: test_exporter.py
tests/training/: test_config.py  test_trainer.py
