[project]
name = "hippofloop"
version = "0.1.0"
description = "Fine-tuning pipeline to distill floop's LLM consolidator into a small local model"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "datasets>=2.0",
]

[project.optional-dependencies]
train = [
    "unsloth[colab-new]>=2024.8",
    "transformers>=4.40",
    "trl>=0.8",
    "torch>=2.0",
    "bitsandbytes>=0.43",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.8",
]

[project.scripts]
hippofloop = "hippofloop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hippofloop"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
